# ai-skills

LLM_api/: .gitignore  REVISION_PLAN.md  codebase_structure.toon  config.py
LLM_api/schemas/: context_types.txt  data_types.txt  prompts.md
LLM_api/src/: __init__.py  agent_engine.py  providers.py
aar/: .report.json  README.md  SKILL.md  UNSOLVED_ISSUES.md  codebase_structure.toon  demo.py  quality_report.toon  rrd.py  tdd_requirements.txt
aar/fail_test/: test_path_resolution_bug.py
aar/prompts/: repair_agent.toon
aar/repair_logs/session_20251231_100725/: full_session_summary.toon  session_metadata.json
aar/repair_logs/session_20251231_101425/: session_metadata.json
aar/repair_logs/session_20251231_102122/: session_metadata.json
aar/repair_logs/session_20251231_102507/: full_session_summary.toon  iter_01_patch.toon  iter_04_context.toon  iter_05_context.toon  iter_09_context.toon  iter_10_context.toon  session_metadata.json
aar/repair_logs/session_20251231_102635/: full_session_summary.toon  iter_02_context.toon  iter_03_context.toon  iter_06_context.toon  iter_07_context.toon  iter_08_context.toon  session_metadata.json
aar/repair_logs/session_20251231_102904/: full_session_summary.toon  iter_01_context.toon  session_metadata.json
aar/sample_test_project/: calculator.py  test_calculator.py
aar/schemas/: context_types.toon  data_types.toon
aar/src/: README.md  __init__.py  agent_orchestrator.py  cli.py  pyproject.toml  requirements.txt
aar/src/adaptive_repair_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aar/src/modules/: __init__.py  cycle_detector.py  data_types.py  debugging_context.py  history_manager.py  llm_gateway.py  llm_gateway_backup.py  llm_gateway_fixed.py  patch_manager.py  static_fixer.py  toon_utils.py
aar/tools/LLM_api/: .env.example  README.md  __init__.py  llm_client.py
aar/tools/LLM_api/src/: tools.py
aar/tools/code_QA/: README.md  SKILL.md  codebase_structure.toon  run_QA.py
aar/tools/code_QA/tools/: __init__.py  mypy_analyzer.py  radon_metrics.py  ruff_checker.py
aar/tools/debugging_context/: README.md  SKILL.md  __main__.py  architecture.toon  pyproject.toml
aar/tools/debugging_context/src/: artifact_manager.py  context_resolver.py  pipeline_orchestrator.py  prompt_builder.py  verification_runner.py
aar/tools/debugging_context/utils/: data_structures.py  path_utils.py
cdqa/: README.md  SKILL.md  __init__.py  cdqa_cli.py  codebase_structure.toon  pyproject.toml  quality_report.toon  run_QA.py
cdqa/cdqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cdqa/tools/: base_checker.py  cdqa_utils.py  complexipy_metrics.py  pattern_analyzer.py  ruff_checker.py  semgrep_scanner.py  skylos_analyzer.py  toon_serializer.py  ty_checker.py
cdscan/: README.md  SKILL.md  cdscan_cli.py  codebase_structure.toon  pyproject.toml  run_code_review.py
cdscan/cdscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cdscan/tools/: astgrep_analyzer.py  ctags_indexer.py  ripgrep_searcher.py  toon_serializer.py  treesitter_analyzer.py  ugrep_searcher.py  utils.py
dbgctxt/: README.md  SKILL.md  codebase_structure.toon  dbgctxt_cli.py  pyproject.toml  quality_report.toon
dbgctxt/dbgctxt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbgctxt/src/: artifact_manager.py  context_resolver.py  dead_code_analyzer.py  pipeline_orchestrator.py  prompt_builder.py  root_cause_analyzer.py  smart_fix_generator.py  verification_runner.py
dbgctxt/utils/: data_structures.py  toon_parser.py
ocwrapper/: README.md  advanced_usage.py  basic_usage.py
ocwrapper/test/: test_web_search.py  url.txt
pydantic_toon/: .gitignore  LICENSE  QUICKSTART.md  README.md  codebase_structure.toon  formatter.py  models.py  pyproject.toml  requirements.txt  serializer.py
pydantic_toon/examples/: __init__.py  example_1_basic.py  example_2_dict.py
pydantic_toon/src/pydantic_toon/: __init__.py  formatter.py  models.py  serializer.py
pydantic_toon/tests/: __init__.py  conftest.py  test_models.py
rrd/: README.md  pyproject.toml  rrd.py  setup.py
rrd/.claude/: rrd_config.yaml
rrd/.claude/commands/: RRD_execute.md
rrd/.specify/memory/: constitution.md  knowledge_kernel.toon
rrd/cli/: __init__.py  cli.py
rrd/core/: __init__.py  config_loader.py  cycle_detector.py  data_types.py  history_manager.py  patch_manager.py  toon_utils.py
rrd/integrations/: __init__.py  cdqa_integration.py  cdscan_integration.py  dbgctxt_integration.py  zgit_integration.py
rrd/llm/: __init__.py  llm_client.py
rrd/orchestrator/: __init__.py  phase_executor.py  rrd_orchestrator.py  session_manager.py
rrd/rrd/tests/: test_config_loader.py  test_cycle_detector.py  test_history_manager.py  test_patch_manager.py  test_toon_utils.py
rrd/tests/integration/: test_orchestrator.py  test_tool_integrations.py
test_rrd/: notes.md
zgit/: SKILL.md  pyproject.toml  zgit.py  zgit_cli.py
zgit/zgit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
