[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdqa"
version = "0.1.0"
description = "Integrated Python code quality analysis using ruff, mypy, semgrep, and radon"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer"}
]
dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "semgrep>=1.0.0",
    "radon>=5.0.0",
]

[project.scripts]
cdqa = "cdqa_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
py-modules = ["cdqa_cli", "run_QA", "__init__"]
