[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdscan"
version = "0.1.0"
 description = "Multi-tool code review using tree-sitter, ctags, ripgrep, ast-grep, and ugrep for comprehensive codebase analysis"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
     {name = "Developer"}
 ]
 dependencies = [
     "tree-sitter>=0.20.0",
     "tree-sitter-python>=0.20.0",
     "tree-sitter-javascript>=0.20.0",
     "tree-sitter-cpp>=0.20.0",
     "tree-sitter-typescript>=0.20.0",
 ]

[project.scripts]
cdscan = "cdscan_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
py-modules = ["cdscan_cli", "run_code_review", "analyze", "__init__"]
